--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
 rvm:
-  - 1.8.7
-  - 1.9.2
   - 1.9.3
+  - 2.0.0
   - ree
-  - rbx-18mode
   - rbx-19mode
-  - jruby
+  - rbx-20mode
+  - jruby-19mode
+  - jruby-20mode
 
 script: "bundle exec rake spec cucumber"
 
 gemfile:
+  - gemfiles/4.0.Gemfile
   - gemfiles/3.2.gemfile
   - gemfiles/3.1.Gemfile
-  - gemfiles/3.0.Gemfile
   
 matrix:
   allow_failures:
-    - rvm: jruby
+    - rvm: jruby-19mode
+    - rvm: jruby-20mode
