--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ rvm:
   - jruby-19mode
   - jruby-20mode
 
-script: "bundle exec rake spec cucumber"
+script: "bundle install && bundle exec rake spec cucumber"
 
 gemfile:
   - gemfiles/4.0.Gemfile
